--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@
         
         <!-- Profile Image on the right -->
         <div class="profile-image-container">
-          <img src="C:\Users\anjan\OneDrive\Desktop\visual studio\newenv\portfolio-website-main\images\me.jpeg" alt="Arathy vijayachandran" class="profile-image" id="profile-image">
+          <img src="C:\Users\anjan\OneDrive\Documents\GitHub\portfolio\images\me.jpeg" alt="Arathy vijayachandran" class="profile-image" id="profile-image">
         </div>
       </div>
     </div>
