--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@
         
         <!-- Profile Image on the right -->
         <div class="profile-image-container">
-          <img src="C:\Users\anjan\OneDrive\Documents\GitHub\portfolio\images\me.jpeg" alt="Arathy vijayachandran" class="profile-image" id="profile-image">
+          <img src="images\me.jpeg" alt="Arathy vijayachandran" class="profile-image" id="profile-image">
         </div>
       </div>
     </div>
@@ -1528,7 +1528,7 @@
           <p>NPTEL</p>
           <!-- Certificate image on hover -->
           <div class="cert-image-container">
-            <img src="C:\Users\anjan\OneDrive\Desktop\visual studio\newenv\portfolio-website-main\images\machine learning.jpg" alt="NPTEL machine learning Certificate" class="cert-image">
+            <img src="machine learning.jpg" alt="NPTEL machine learning Certificate" class="cert-image">
           </div>
         </div>
         
