--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@
           <div class="hero-buttons">
             <a href="#contact" class="btn-graphic-1"><i class="fas fa-phone"></i> <span style="margin-left: 8px;">Get In Touch</span></a>
             <a href="#projects" class="btn-graphic-2"><i class="fas fa-laptop-code"></i> <span style="margin-left: 8px;">View Projects</span></a>
-            <a href="#" class="btn-resume" id="resume-download"><i class="fas fa-eye"></i> <span style="margin-left: 8px;">Check Resume</span></a>
+            <a href="https://drive.google.com/file/d/1Sr4pU3zG7MFC_tRpZFO2xLVPoHpuqmJl/view?usp=drive_link" class="btn-resume" id="resume-download"><i class="fas fa-eye"></i> <span style="margin-left: 8px;">Check Resume</span></a>
           </div>
         </div>
         
