--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@
           <div class="hero-buttons">
             <a href="#contact" class="btn-graphic-1"><i class="fas fa-phone"></i> <span style="margin-left: 8px;">Get In Touch</span></a>
             <a href="#projects" class="btn-graphic-2"><i class="fas fa-laptop-code"></i> <span style="margin-left: 8px;">View Projects</span></a>
-            <a href="https://drive.google.com/file/d/1Sr4pU3zG7MFC_tRpZFO2xLVPoHpuqmJl/view" class="btn-resume" id="resume-download"><i class="fas fa-eye"></i> <span style="margin-left: 8px;">Check Resume</span></a>
+            <a href="https://drive.google.com/file/d/1Sr4pU3zG7MFC_tRpZFO2xLVPoHpuqmJl/view?usp=sharing" class="btn-resume" id="resume-download"><i class="fas fa-eye"></i> <span style="margin-left: 8px;">Check Resume</span></a>
           </div>
         </div>
         
@@ -1583,18 +1583,7 @@
           <p>Pre-Conference</p>
           <!-- Certificate image on hover -->
           <div class="cert-image-container">
-            <img src="images/presentation.png" alt="Certificate" class="cert-image">
-          </div>
-        </div>
-        
-        <!-- Certification 7 -->
-        <div class="certification-card">
-          <i class="fas fa-award"></i>
-          <h3>Problem Solving through Programming in C</h3>
-          <p>NPTEL</p>
-          <!-- Certificate image on hover -->
-          <div class="cert-image-container">
-            <img src="images/nptel.png" alt="NPTEL C Programming Certificate" class="cert-image">
+            <img src="images\presentation.png" alt="Certificate" class="cert-image">
           </div>
         </div>
       </div>
