--- a/index.html
+++ b/index.html
@@ -1583,7 +1583,7 @@
           <p>Pre-Conference</p>
           <!-- Certificate image on hover -->
           <div class="cert-image-container">
-            <img src="images\presentation.png" alt="Certificate" class="cert-image">
+            <img src="images\paper presentation.png" alt="Certificate" class="cert-image">
           </div>
         </div>
       </div>
