--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       transform: translateX(-50%);
       width: 80px;
       height: 4px;
-      background: linear-gradient(90deg, #ff6b6b, #4ecdc4, #7f5af0);
+      background: linear-gradient(90deg, #e06161, #4ecdc4, #b9a7ef);
       border-radius: 2px;
     }
     
