--- a/index.html
+++ b/index.html
@@ -1677,7 +1677,30 @@
       <h2 class="section-title">Contact Me</h2>
       
       <div class="contact-container">
-       
+       <form action="https://formsubmit.co/arathyv3002@gmail.com" method="POST">
+  <input type="hidden" name="_captcha" value="false">
+
+  <div class="form-group">
+    <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+  </div>
+  
+  <div class="form-group">
+    <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+  </div>
+  
+  <div class="form-group">
+    <input type="text" name="subject" class="form-control" placeholder="Subject" required>
+  </div>
+  
+  <div class="form-group">
+    <textarea name="message" class="form-control" placeholder="Your Message" required></textarea>
+  </div>
+  
+  <button type="submit" class="btn-graphic-1" style="width: 100%;">
+    Send Message <i class="fas fa-paper-plane"></i>
+  </button>
+</form>
+
         <!-- Contact Information -->
         <div class="contact-info">
           <h3>Contact Information</h3>
