--- a/index.html
+++ b/index.html
@@ -1481,7 +1481,7 @@
         <!-- Project 5: Sales-Prediction-with-LSTM -->
         <div class="project-card">
           <div class="project-content">
-            <h3 class="project-title">Sales-Prediction-with-LSTM</h3>
+            <h3 class="project-title">Sales Prediction with-LSTM</h3>
             <p class="project-description">Predict your future sales with ease using our AI-powered forecasting tool.The app uses advanced LSTM neural networks to generate accurate 6-month predictions. Visualize trends, compare actual vs. predicted values, and download results instantly — no coding needed.</p>
             
             <div class="project-tags">
