--- a/index.html
+++ b/index.html
@@ -1307,11 +1307,11 @@
       <div class="about-content">
         <div class="about-text">
          <div>
-  <p>Passionate statistics with data science student with hands-on experience in developing impactful solutions through internship and projects in data science, machine learning, and web development. Proficient in Python, R ,SQL and PowerBI with a strong ability to analyze complex datasets and build data-driven applications.</p>
+  <p>Passionate Statistics with data science student with hands-on experience in developing impactful solutions through internship and projects in data science, machine learning and web development. Proficient in Python, R ,SQL and PowerBI with a strong ability to analyze complex datasets and build data-driven applications.</p>
   
   <p>A mathematics graduate from Sacred Heart College, Thevara.Currently pursuing Masters in Statistics with Data Science at Rajagiri College of Social Sciences, Kalamassery, Kochi. I am driven by a desire to harness data and technology to solve real-world problems. My goal is to become an expert data scientist, creating innovative models and applications that drive meaningful insights.</p>
   
-  <p>Through my academic journey, internships, and personal projects, I have built a robust foundation in statistical analysis, machine learning algorithms, and programming. I am continuously exploring new tools and techniques to enhance my expertise in data science and related fields.</p>
+  <p>Through my academic journey, internships, and personal projects. I have built a robust foundation in statistical analysis, machine learning algorithms and programming. I am continuously exploring new tools and techniques to enhance my expertise in data science and related fields.</p>
 </div>
       </div>
     </div>
