--- a/index.html
+++ b/index.html
@@ -1599,7 +1599,7 @@
           </div>
           <div>
             <h3 class="internship-title">Data Science Intern</h3>
-            <p class="internship-company">G10X</p>
+            <p class="internship-company">G10X TECHNOLOGY PVT LTD, KOCHI </p>
           </div>
         </div>
         
