--- a/index.html
+++ b/index.html
@@ -1482,7 +1482,7 @@
         <div class="project-card">
           <div class="project-content">
             <h3 class="project-title">Car Sales Dashboard</h3>
-            <p class="project-description">The Car Sales Dashboard is a visually compelling data analytics project developed using Microsoft Power BI, designed to extract actionable insights from real-world car sales data. Built from a structured dataset containing detailed records of car sales across 2022 and 2023, the dashboard empowers stakeholders—such as sales teams, marketing strategists, and senior executives to make informed decisions by analyzing trends in revenue performance, brand popularity, regional market dynamics and customer demographics. With interactive filters and visualizations, it provides a comprehensive view of sales patterns, helping users explore key metrics like total revenue, monthly performance, top-selling companies and buyer preferences across segments.</p>
+            <p class="project-description">The Car Sales Dashboard is a data driven project built in Microsoft Power BI using real-world sales data from 2022 and 2023. It enables stakeholders—like sales teams and executives—to make informed decisions by analyzing revenue trends, brand performance, regional dynamics and customer demographics. With interactive visuals and filters, the dashboard offers insights into key metrics such as total sales, monthly trends, top-selling brands and buyer preferences across segments.</p>
             
             <div class="project-tags">
               <span class="project-tag">Power BI</span>
