--- a/index.html
+++ b/index.html
@@ -1378,12 +1378,14 @@
             <div class="skill-bubble">Python</div>
             <div class="skill-bubble">Prompt Engineering</div>
             <div class="skill-bubble">SQL</div>
+            <div class="skill-bubble">NLP</div>
             <div class="skill-bubble">Machine Learning</div>
             <div class="skill-bubble">PowerBI</div>
             <div class="skill-bubble">Microsoft Excel</div>
             <div class="skill-bubble">R Programming</div>
             <div class="skill-bubble">tableau</div>
             <div class="skill-bubble">AI</div>
+            <div class="skill-bubble">Deep Learning</div>
           </div>
         </div>
         
