--- a/index.html
+++ b/index.html
@@ -1384,8 +1384,7 @@
             <div class="skill-bubble">R Programming</div>
             <div class="skill-bubble">tableau</div>
             <div class="skill-bubble">AI</div>
-            <div class="skill-bubble">Deep Learning</div>
-            
+
           </div>
         </div>
         
@@ -1400,6 +1399,7 @@
             <div class="skill-bubble">Teamwork</div>
             <div class="skill-bubble">Time Management</div>
             <div class="skill-bubble">Adaptability</div>
+            <div class="skill-bubble">Leadership</div>
             <div class="skill-bubble">Critical Thinking</div>
           </div>
         </div>
