--- a/index.html
+++ b/index.html
@@ -1565,7 +1565,7 @@
           <p>RAJAGIRI COLLEGE OF SOCIAL SCIENCES</p>
           <!-- Certificate image on hover -->
           <div class="cert-image-container">
-            <img src="images\power BI.jpeg" alt="ACCENTURE Web Analytics Certificate" class="cert-image">
+            <img src="images\power BI 1.png" alt="ACCENTURE Web Analytics Certificate" class="cert-image">
           </div>
         </div>
         
